--- a/Apartrent_Try2/Apartrent_Try2/wwwroot/SearchResult/Template/ViewApartment.html
+++ b/Apartrent_Try2/Apartrent_Try2/wwwroot/SearchResult/Template/ViewApartment.html
@@ -22,10 +22,14 @@
 
 <div class="w3-animate-bottom " style="width:100%;display:flex;flex-direction:column;flex-wrap:wrap;justify-content:center;align-items:center">
 
-    <div style="width:100%;max-width:450px">
-        <img style="width:100%" class="w3-mobile" src="../../ApartrentPhotos/default-profile-image.png" />
+    <div style="width:100%;max-width:500px" class="w3-content">
+        <img style="width:100%;max-width:450px ;max-height:200px" class="" src="{{currentApartmentData.apartmentImage[index]}}" />
+        <div class="w3-row-padding w3-section">
+            <div class="w3-col s4"  ng-repeat="image in currentApartmentData.apartmentImage track by $index">
+                <img ng-if="image !== null " class=" w3-opacity w3-hover-opacity-off" src="{{image}}" style="width:100%;cursor:pointer;max-width:100px;max-height:50px" ng-click="changePicture($index)">
+            </div>
+        </div>
     </div>
-
     <br />
     <h3>Apartment Info:</h3>
     <div style="width:100%;display:flex;flex-direction:column;flex-wrap:wrap;justify-content:center;align-items:center" class="w3-mobile">
