--- a/Apartrent_Try2/Apartrent_Try2/wwwroot/SearchResult/Template/searchResult.html
+++ b/Apartrent_Try2/Apartrent_Try2/wwwroot/SearchResult/Template/searchResult.html
@@ -44,13 +44,13 @@
     </form>
 </div>
 
-<div class="w3-mobile" style="width:100%;display:flex;flex-wrap:wrap;flex-direction:column;justify-content:center;align-items:center;" id="main">
+<div  style="width:100%;display:flex;flex-wrap:wrap;flex-direction:column;justify-content:center;align-items:center;" id="main">
 
     <h1>Your Search Result:</h1>
     <div class="w3-content" style="display:flex;flex-wrap:wrap;">
-        <div class="w3-round-large w3-padding-16 w3-hover-shadow w3-mobile  w3-border" ng-repeat="apartment in searchResult track by $index">
+        <div style="width:300px" class="w3-round-large w3-padding-16 w3-hover-shadow w3-mobile  w3-border" ng-repeat="apartment in searchResult track by $index">
             <div style="cursor:pointer;text-align:center;" ng-click="setApartmentData(apartment)" ui-sref="ApartmentView({apartmentID:apartment.apartmentID,fromDate:apartment.fromDate,toDate:apartment.toDate,guests:apartment.numberOfGuests})">
-                <img /> save spot for images
+                <img class="w3-mobile" style="width:100%;height:100%;" src="{{apartment.apartmentImage}}" />
                 <p>Address:{{apartment.address}}</p>
                 <p>Days:{{apartment.totalNumberOfDays}}</p>
                 <p>Price Per Day:{{apartment.pricePerDay}}</p>
