--- a/Apartrent_Try2/Apartrent_Try2/wwwroot/UserProfile/RenterFeatures/Template/AddApartment.html
+++ b/Apartrent_Try2/Apartrent_Try2/wwwroot/UserProfile/RenterFeatures/Template/AddApartment.html
@@ -1,54 +1,65 @@
 ﻿<center class="w3-animate-bottom " style="width:100%;display:flex;flex-direction:column;flex-wrap:wrap;justify-content:center;align-items:center">
     <h1>Add New Apartment:</h1>
+
+            <img src="{{newApartmentPicture[index]}}" style="width:100%;max-width:200px;max-height:200px">
+            <input type="file" required class="w3-input w3-mobile" style="width:100%;max-width:244.391px;" ng-file-select="onFileSelect($files)" ng-model="newApartmentPicture[index]">
+            
+            <div class="w3-row-padding w3-section">
+                <div class="w3-col  s4" ng-repeat="n in [].constructor(5) track by $index">
+                    <img ng-if="newApartmentPicture[$index] !== null " class=" w3-mobile w3-opacity w3-hover-opacity-off" src="{{newApartmentPicture[$index]}}" style="width:100%;cursor:pointer;max-width:50px;max-height:50px" ng-click="changePicture($index)">
+                    <img ng-if="newApartmentPicture[$index] === null" class=" w3-mobile w3-opacity w3-hover-opacity-off" src="/ApartrentPhotos/default-profile-image.png" style="width:100%;cursor:pointer;max-width:50px;max-height:50px" ng-click="changePicture($index)">
+                </div>
+            </div>
     <form class="w3-content w3-mobile w3-cell  w3-animate-bottom w3-round" style="width:100%;">
-        <h6>Select Apartment Category:</h6><select class="w3-select w3-mobile"  style="width:100%;max-width:244.391px;"ng-model="$parent.categoryID">
-            <option ng-repeat="category in categories" ng-value="category.categoryID">{{category.apartmentType}}</option>
-        </select>
-        <br />
 
-        <br />
-        <h6>Address:</h6> <input placeholder="Ex:Tel-Aviv Eiban Gavirol 30" class="w3-input w3-mobile"  style="width:100%;max-width:244.391px;" ng-model="$parent.address" type="text" />
-        <br />
+            <h6>Select Apartment Category:</h6><select class="w3-select w3-mobile" style="width:100%;max-width:244.391px;" ng-model="$parent.categoryID">
+                <option ng-repeat="category in categories" ng-value="category.categoryID">{{category.apartmentType}}</option>
+            </select>
+            <br />
 
-        <h6>Select country:</h6><select class="w3-select w3-mobile"  style="width:100%;max-width:244.391px;"" ng-model="$parent.countryID" required id="countrySelect">
-            <option ng-repeat="country in countries track by $index" ng-value="country.countryID">{{country.countryName}}</option>
-        </select>
-        <br />
-        <h6>From Date:</h6> <input class="w3-input w3-mobile"  style="width:100%;max-width:244.391px;"type="date" min="{{fromDate | date:'yyyy-MM-dd'}}" ng-model="$parent.availableFromDate" />
-        <br />
+            <br />
+            <h6>Address:</h6> <input placeholder="Ex:Tel-Aviv Eiban Gavirol 30" class="w3-input w3-mobile" style="width:100%;max-width:244.391px;" ng-model="$parent.address" type="text" />
+            <br />
 
-        <h6>To Date:</h6> <input class="w3-input w3-mobile"  style="width:100%;max-width:244.391px;" type="date" min="{{$parent.availableFromDate  | date:'yyyy-MM-dd'}}" ng-model="$parent.availableToDate" />
-        <br />
-        <h6>Number Of Guests:</h6> <select ng-model="$parent.numberOfGuests" class="w3-input w3-select"  style="width:100%;max-width:244.391px;">
-            <option ng-repeat="n in [].constructor(20) track by $index" ng-value="$index+1">{{$index+1}}</option>
-        </select>
-        <h6>Price Per Day:</h6><input placeholder="Ex:100" class="w3-input w3-mobile"  style="width:100%;max-width:244.391px;height:100%;max-height:86px" type="number" ng-model="$parent.pricePerDay" />
-        <br />
-        <h6>Description:</h6> <textarea placeholder="Apartment Description" class="w3-input w3-mobile"  style="resize:none;width:100%;max-width:244.391px;height:100%;max-height:86px" ng-model="$parent.description"></textarea>
-        <br />
+            <h6>Select country:</h6><select class="w3-select w3-mobile" style="width:100%;max-width:244.391px;" " ng-model="$parent.countryID" required id="countrySelect">
+                <option ng-repeat="country in countries track by $index" ng-value="country.countryID">{{country.countryName}}</option>
+            </select>
+            <br />
+            <h6>From Date:</h6> <input class="w3-input w3-mobile" style="width:100%;max-width:244.391px;" type="date" min="{{fromDate | date:'yyyy-MM-dd'}}" ng-model="$parent.availableFromDate" />
+            <br />
 
-        <div class="w3-content">
-            Shower:<input class="w3-input w3-check w3-cell" ng-model="$parent.isShower" type="checkbox" />
-            Bath:<input class="w3-input w3-check w3-cell" ng-model="$parent.isBath" type="checkbox" />
-            WIFI:<input class="w3-input w3-check w3-cell" ng-model="$parent.isWIFI" type="checkbox" />
-            TV:<input class="w3-input w3-check w3-cell" ng-model="$parent.isTV" type="checkbox" />
-            Cables:<input class="w3-input w3-check w3-cell" ng-model="$parent.isCables" type="checkbox" />
-            Satellite:<input class="w3-input w3-check w3-cell" ng-model="$parent.isSatellite" type="checkbox" />
-            Pets:<input class="w3-input w3-check w3-cell" ng-model="$parent.isPets" type="checkbox" />
-            Living Room:<input class="w3-input w3-check w3-cell" ng-model="$parent.isLivingRoom" type="checkbox" />
-            <p class="w3-opacity">For your notice blank mean that the feature is not exist in your apartment</p>
-        </div>
-        <h6> Number of Bed Rooms:</h6><input placeholder="Ex:0" class="w3-input w3-mobile"  style="width:100%;max-width:244.391px;" ng-model="$parent.numberOfBedRooms" type="number" />
-        <h6> BedRoom Description:</h6><textarea placeholder="Ex: One master bedroom and two guest rooms" class="w3-input w3-mobile" style="resize:none;width:100%;max-width:244.391px;height:100%;max-height:86px" ng-model="$parent.bedRoomDescription"></textarea>
-        <h6> Living Room Description:</h6><textarea placeholder="Ex: Very cousy living room with big screen T.V and Xbox built in, balcony just outside" class="w3-input w3-mobile"  style="resize:none;width:100%;max-width:244.391px;height:100%;max-height:86px" ng-model="$parent.livingRoomDescription"></textarea>
-        <h6> Queen Size Bed:</h6> <input class="w3-input w3-mobile"  style="width:100%;max-width:244.391px;" min="0" placeholder="Ex:0" ng-model="$parent.queenSizeBed" type="number" />
-        <h6> Double Bed: </h6><input class="w3-input w3-mobile"  style="width:100%;max-width:244.391px;" min="0" placeholder="Ex:0" ng-model="$parent.doubleBed" type="number" />
-        <h6> Single Bed:</h6> <input class="w3-input w3-mobile"  style="width:100%;max-width:244.391px;" min="0" placeholder="Ex:0" ng-model="$parent.singleBed" type="number" />
-        <h6> Sofa Bed:</h6> <input class="w3-input w3-mobile"  style="width:100%;max-width:244.391px;" min="0" placeholder="Ex:0" ng-model="$parent.sofaBed" type="number" />
-        <h6> Beds Description:</h6> <textarea placeholder="Ex:Two queen size beds with orginal egyption bedclothes " class="w3-input w3-mobile" style="resize:none;width:100%;max-width:244.391px;height:100%;max-height:86px" ng-model="$parent.bedsDescription"></textarea>
-        <br /><div ng-switch="role">
-            <button class="w3-mobile w3-round w3-button w3-green w3-hover-blue" ng-switch-when="0" ng-click="addApartment(true)">Add apartment and become a renter</button>
-            <button ng-switch-when="1" class="w3-mobile w3-round w3-hover-blue w3-button w3-green" ng-click="addApartment()">Add new apartment</button>
-        </div>
+            <h6>To Date:</h6> <input class="w3-input w3-mobile" style="width:100%;max-width:244.391px;" type="date" min="{{$parent.availableFromDate  | date:'yyyy-MM-dd'}}" ng-model="$parent.availableToDate" />
+            <br />
+            <h6>Number Of Guests:</h6> <select ng-model="$parent.numberOfGuests" class="w3-input w3-select" style="width:100%;max-width:244.391px;">
+                <option ng-repeat="n in [].constructor(20) track by $index" ng-value="$index+1">{{$index+1}}</option>
+            </select>
+            <h6>Price Per Day:</h6><input placeholder="Ex:100" class="w3-input w3-mobile" style="width:100%;max-width:244.391px;height:100%;max-height:86px" type="number" ng-model="$parent.pricePerDay" />
+            <br />
+            <h6>Description:</h6> <textarea placeholder="Apartment Description" class="w3-input w3-mobile" style="resize:none;width:100%;max-width:244.391px;height:100%;max-height:86px" ng-model="$parent.description"></textarea>
+            <br />
+
+            <div class="w3-content">
+                Shower:<input class="w3-input w3-check w3-cell" ng-model="$parent.isShower" type="checkbox" />
+                Bath:<input class="w3-input w3-check w3-cell" ng-model="$parent.isBath" type="checkbox" />
+                WIFI:<input class="w3-input w3-check w3-cell" ng-model="$parent.isWIFI" type="checkbox" />
+                TV:<input class="w3-input w3-check w3-cell" ng-model="$parent.isTV" type="checkbox" />
+                Cables:<input class="w3-input w3-check w3-cell" ng-model="$parent.isCables" type="checkbox" />
+                Satellite:<input class="w3-input w3-check w3-cell" ng-model="$parent.isSatellite" type="checkbox" />
+                Pets:<input class="w3-input w3-check w3-cell" ng-model="$parent.isPets" type="checkbox" />
+                Living Room:<input class="w3-input w3-check w3-cell" ng-model="$parent.isLivingRoom" type="checkbox" />
+                <p class="w3-opacity">For your notice blank mean that the feature is not exist in your apartment</p>
+            </div>
+            <h6> Number of Bed Rooms:</h6><input placeholder="Ex:0" class="w3-input w3-mobile" style="width:100%;max-width:244.391px;" ng-model="$parent.numberOfBedRooms" type="number" />
+            <h6> BedRoom Description:</h6><textarea placeholder="Ex: One master bedroom and two guest rooms" class="w3-input w3-mobile" style="resize:none;width:100%;max-width:244.391px;height:100%;max-height:86px" ng-model="$parent.bedRoomDescription"></textarea>
+            <h6> Living Room Description:</h6><textarea placeholder="Ex: Very cousy living room with big screen T.V and Xbox built in, balcony just outside" class="w3-input w3-mobile" style="resize:none;width:100%;max-width:244.391px;height:100%;max-height:86px" ng-model="$parent.livingRoomDescription"></textarea>
+            <h6> Queen Size Bed:</h6> <input class="w3-input w3-mobile" style="width:100%;max-width:244.391px;" min="0" placeholder="Ex:0" ng-model="$parent.queenSizeBed" type="number" />
+            <h6> Double Bed: </h6><input class="w3-input w3-mobile" style="width:100%;max-width:244.391px;" min="0" placeholder="Ex:0" ng-model="$parent.doubleBed" type="number" />
+            <h6> Single Bed:</h6> <input class="w3-input w3-mobile" style="width:100%;max-width:244.391px;" min="0" placeholder="Ex:0" ng-model="$parent.singleBed" type="number" />
+            <h6> Sofa Bed:</h6> <input class="w3-input w3-mobile" style="width:100%;max-width:244.391px;" min="0" placeholder="Ex:0" ng-model="$parent.sofaBed" type="number" />
+            <h6> Beds Description:</h6> <textarea placeholder="Ex:Two queen size beds with orginal egyption bedclothes " class="w3-input w3-mobile" style="resize:none;width:100%;max-width:244.391px;height:100%;max-height:86px" ng-model="$parent.bedsDescription"></textarea>
+            <br /><div ng-switch="role">
+                <button class="w3-mobile w3-round w3-button w3-green w3-hover-blue" ng-switch-when="0" ng-click="addApartment(true)">Add apartment and become a renter</button>
+                <button ng-switch-when="1" class="w3-mobile w3-round w3-hover-blue w3-button w3-green" ng-click="addApartment()">Add new apartment</button>
+            </div>
     </form>
 </center>
