--- a/Apartrent_Try2/Apartrent_Try2/wwwroot/UserProfile/RenterFeatures/Template/CurrentUserApartmentView.html
+++ b/Apartrent_Try2/Apartrent_Try2/wwwroot/UserProfile/RenterFeatures/Template/CurrentUserApartmentView.html
@@ -2,11 +2,15 @@
 
 
     <div style="width:100%;display:flex;flex-direction:column;flex-wrap:wrap;justify-content:center;align-items:center;">
-
-        <p>
-            <img /> save spot for imgs
-        </p>
-
+        <div class="w3-content">
+            <br />
+            <img src="{{userDetails.currentApartment.apartmentImage[index]}}" style="width:100%;max-width:400px ;max-height:200px">
+            <div class="w3-row-padding w3-section">
+                <div class="w3-col s4" ng-repeat="image in userDetails.currentApartment.apartmentImage track by $index">
+                    <img ng-if="image !== null " class="demo w3-mobile w3-opacity w3-hover-opacity-off" src="{{image}}" style="width:100%;cursor:pointer;max-width:100px;max-height:50px" ng-click="changePicture($index)">
+                </div>
+            </div>
+        </div>
         <br />
         <address>Address:{{userDetails.currentApartment.address}}</address>
 
