--- a/Apartrent_Try2/Apartrent_Try2/wwwroot/SearchResult/Template/searchResult.html
+++ b/Apartrent_Try2/Apartrent_Try2/wwwroot/SearchResult/Template/searchResult.html
@@ -56,6 +56,7 @@
                 <p>Price Per Day:{{apartment.pricePerDay}}</p>
                 <p>Price for Staying:{{apartment.priceForStaying}}</p>
                 <p>Apartment Type:{{apartment.apartmentType}}</p>
+                <p>Average  Rating:{{apartment.avgRate}}</p>
             </div>
 
             <!-- need to add rating,image -->
