--- a/Apartrent_Try2/Apartrent_Try2/wwwroot/SearchResult/Template/ViewApartment.html
+++ b/Apartrent_Try2/Apartrent_Try2/wwwroot/SearchResult/Template/ViewApartment.html
@@ -215,7 +215,7 @@
         </div>
 
         <h3 class="w3-hide-large">Pay here</h3>
-        <div class="w3-hide-large w3-mobile w3-metro-dark-red">
+        <center style="width:100%" class="w3-hide-large w3-mobile w3-metro-dark-red">
             <p class="">Price for staying:</p>
             <p class="">{{currentApartmentData.priceForStaying}}</p>
             <p class="">Price Per Day:{{currentApartmentData.pricePerDay}}</p>
@@ -234,7 +234,7 @@
                 <p>Login to order the apartment</p>
             </div>
 
-        </div>
+        </center>
 
 
         <h3>Write a review here:</h3>
