--- a/Apartrent_Try2/Apartrent_Try2/wwwroot/SearchResult/Template/searchResult.html
+++ b/Apartrent_Try2/Apartrent_Try2/wwwroot/SearchResult/Template/searchResult.html
@@ -44,13 +44,12 @@
     </form>
 </div>
 
-<div  style="width:100%;display:flex;flex-wrap:wrap;flex-direction:column;justify-content:center;align-items:center;" id="main">
-
     <h1>Your Search Result:</h1>
-    <div class="w3-content" style="display:flex;flex-wrap:wrap;">
-        <div style="width:300px" class="w3-round-large w3-padding-16 w3-hover-shadow w3-mobile  w3-border" ng-repeat="apartment in searchResult track by $index">
-            <div style="cursor:pointer;text-align:center;" ng-click="setApartmentData(apartment)" ui-sref="ApartmentView({apartmentID:apartment.apartmentID,fromDate:apartment.fromDate,toDate:apartment.toDate,guests:apartment.numberOfGuests})">
-                <img class="w3-mobile" style="width:100%;height:100%;" src="{{apartment.apartmentImage}}" />
+<div  style="display:flex" id="main">
+    <div  style="width:100%;height:100%;display:flex;flex-wrap:wrap;justify-content:center;align-items:center;">
+        <div style="height:100%;margin:0 5px;" class="w3-round-large w3-padding-32 w3-hover-shadow w3-border" ng-repeat="apartment in searchResult track by $index">
+            <div style="cursor:pointer;text-align:center;height:100%;max-height:400px;" ng-click="setApartmentData(apartment)" ui-sref="ApartmentView({apartmentID:apartment.apartmentID,fromDate:apartment.fromDate,toDate:apartment.toDate,guests:apartment.numberOfGuests})">
+                <img  style="width:100%;height:100%;max-width:205px;max-height:205px;" src="{{apartment.apartmentImage}}" />
                 <p>Address:{{apartment.address}}</p>
                 <p>Days:{{apartment.totalNumberOfDays}}</p>
                 <p>Price Per Day:{{apartment.pricePerDay}}</p>
