--- a/Apartrent_Try2/Apartrent_Try2/wwwroot/UserProfile/RenterFeatures/Template/EditApartment.html
+++ b/Apartrent_Try2/Apartrent_Try2/wwwroot/UserProfile/RenterFeatures/Template/EditApartment.html
@@ -11,7 +11,7 @@
                 <img ng-if="editPicture[$index] === null" class="demo w3-mobile w3-opacity w3-hover-opacity-off" src="/ApartrentPhotos/default-profile-image.png" style="width:100%;cursor:pointer;max-width:50px;max-height:50px" ng-click="changePicture($index)">
             </div>
         </div>
-        <br /><button type="submit" class="w3-green w3-round w3-button w3-mobile" style="width:100%;max-width:244.391px;"  ng-click="editApartmentPicture()">Save Changes</button>
+        <br /><button ng-disabled="editApartmentBtn" type="submit" class="w3-green w3-round w3-button w3-mobile" style="width:100%;max-width:244.391px;"  ng-click="editApartmentPicture()">Save Changes</button>
 
     </div>
     <form style="width:100%">
@@ -61,6 +61,6 @@
             <h6>Beds Description:</h6> <textarea style="resize:none;width:100%;max-width:244.391px;" class="w3-input w3-border" placeholder="{{$parent.userDetails.currentApartment.bedsDescription}}" ng-model="$parent.editBedsDescription"></textarea>
         </div>
         <br />
-        <a class="w3-button w3-purple w3-round w3-hover-blue" ng-click="editApartment()" ng-href="yourProfile/{{userDetails.userName}}/userApartments.html">Save</a>
+        <button ng-disabled="editApartmentBtn" class="w3-button w3-purple w3-round w3-hover-blue" ng-click="editApartment()">Save</button>
     </form>
 </center>
